--- a/10_webEx copy.css
+++ b/10_webEx copy.css
@@ -1,4 +1,7 @@
 @charset "uta-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
 body {
     background-image: repeating-linear-gradient(90deg, #5d280f 0,#5d280f 50px, #391f13 50px, #391f13 100px);
 }
@@ -10,9 +13,9 @@ body {
 }
 header {
     background-color: purple;
-    height: 70px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    height: 130px;
     font-weight: bold;
+    font-family: 'Pacifico', cursive;
 }
 .logo {
     width: 90px; height: 90px;
@@ -24,18 +27,20 @@ header {
     color: white;
     float: left;
     margin: 20px;
-    text-decoration: underline;
 }
-h1, h2 {
+h1, span {
     margin:0; padding: 0;
     color: white;
     background-color: purple;
+    text-transform: capitalize;
 }
 header h1 {
     padding-top: 30px;
+    line-height: 1;
 }
-header h2 {
-    padding-bottom: 35px;
+header span {
+    font-size: 30px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 ul {
     list-style: none;
@@ -79,8 +84,10 @@ main .img {
 main img {
     width: 290px; height: 190px;
     object-fit: cover;
+    object-position: 50% 20%;
     position: absolute;
-    top:4px; left: 4px; 
+    top:4px; left: 4px;
+
 }
 main .img p {
     margin: 200px;
